option(
  'spdk_root',
  type : 'string',
  value : '/home/skhynix/spdk',
  description : 'Root directory of the SPDK source/build tree',
)

option(
  'spdk_pkgconfig_dir',
  type : 'string',
  value : '/home/skhynix/spdk/build/lib/pkgconfig',
  description : 'Directory containing SPDK pkg-config files',
)

option(
  'spdk_dpdk_lib_dir',
  type : 'string',
  value : '/home/skhynix/spdk/dpdk/build/lib',
  description : 'Directory containing DPDK shared libraries used by SPDK',
)
